tests/baselines/reference/typedefMultipleTypeParameters.errors.txt
tests/cases/conformance/jsdoc/a.js(12,23): error TS2737: Property 'b' is missing in type { a: number; }' but present in type '{ a: number; b: string; }'.
tests/cases/conformance/jsdoc/a.js(15,12): error TS2314: Generic type 'Everything' requires 5 type argument(s).
tests/cases/conformance/jsdoc/test.ts(1,34): error TS2737: Property 'b' is missing in type { a: number; }' but present in type '{ a: number; b: string; }'.


==== tests/cases/conformance/jsdoc/a.js (2 errors) ====
    /**
     * @template {{ a: number, b: string }} T,U A Comment
     * @template {{ c: boolean }} V uh ... are comments even supported??
     * @template W
     * @template X That last one had no comment
     * @typedef {{ t: T, u: U, v: V, w: W, x: X }} Everything
     */
    
    /** @type {Everything<{ a: number, b: 'hi', c: never }, undefined, { c: true, d: 1 }, number, string>} */
    var tuvwx;
    
    /** @type {Everything<{ a: number  }, undefined, { c: 1, d: 1 }, number, string>} */
                          ~~~~~~~~~~~~~~
!!! error TS2737: Property 'b' is missing in type { a: number; }' but present in type '{ a: number; b: string; }'.
    var wrong;
    
    /** @type {Everything<{ a: number  }>} */
               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'Everything' requires 5 type argument(s).
    var insufficient;
    
==== tests/cases/conformance/jsdoc/test.ts (1 errors) ====
    declare var actually: Everything<{ a: number  }, undefined, { c: 1, d: 1 }, number, string>;
                                     ~~~~~~~~~~~~~~
!!! error TS2737: Property 'b' is missing in type { a: number; }' but present in type '{ a: number; b: string; }'.
    